added building macos target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,14 @@
 cmake_minimum_required(VERSION 3.10)
+set (CMAKE_CXX_STANDARD 11)
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
 
 project(tsa)
+
+
+find_package(SDL2 REQUIRED)
+find_package(SDL2_image REQUIRED)
+find_package(SDL2_mixer REQUIRED)
 
 add_executable(tsa
   src/main.cpp
@@ -66,7 +74,13 @@ target_include_directories(tsa PUBLIC
   src/ui/labels
   src/ui/labels/score
   src/ui/slide
+  include/
+  include/headers
+  ${SDL2_INCLUDE_DIRS} 
+${SDL2_IMAGE_INCLUDE_DIRS}	
+${SDL2_MIXER_INCLUDE_DIRS}	
 )
 
-target_link_libraries(tsa SDL2 SDL2_image SDL2_mixer)
+
+target_link_libraries(tsa ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_MIXER_LIBRARIES} )
 set_target_properties(tsa PROPERTIES RUNTIME_OUTPUT_DIRECTORY bin)
